# network

./: .gitignore  CMakeLists.txt  Notes.md  README.md
.postman/: resources.yaml
config/: config.json
data/: test.json
src/: main.cpp
src/audio/: AudioSourceBase.cpp  AudioSourceBase.h  AudioSourceFactory.cpp  AudioSourceFactory.h  CMakeLists.txt  IAudioSource.h  README.md  SystemAudioSource.cpp  SystemAudioSource.h
src/core/: CMakeLists.txt  Config.cpp  Config.h  Logger.cpp  Logger.h  Types.h
src/network/: ApiResponse.h  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  FileIndexer.cpp  FileIndexer.h  HttpServer.cpp  HttpServer.h  IdGenerator.cpp  IdGenerator.h  NetworkDTO.h  NetworkDefines.h  NetworkResponse.h  NetworkService.cpp  NetworkService.h  README.md  Response.h
src/network/controller/: AudioRecordController.cpp  AudioRecordController.h
src/network/mapper/: AudioRecordMapper.cpp  AudioRecordMapper.h
src/network/service/: AudioRecordService.cpp  AudioRecordService.h
src/network/utils/: FileIndexer.cpp  FileIndexer.h  HttpServer.cpp  HttpServer.h  IdGenerator.cpp  IdGenerator.h  JwtUtils.h  ThrottledFile.h  ZipUtils.h
src/processing/: CMakeLists.txt  DenoiseProcessor.cpp  DenoiseProcessor.h  FeatureExtractor.cpp  FeatureExtractor.h  PipelineManager.h  SimulatedPcmSource.h  VADProcessor.cpp  VADProcessor.h  audio_module_api.h  denoise_processor.cpp  denoise_processor.h  feature_extractor.cpp  feature_extractor.h  main.cpp  pipeline_manager.cpp  pipeline_manager.h  radar_processing.cpp  radar_processing.h  radar_processor_base.cpp  radar_processor_base.h  radar_types.h  radar_utils.cpp  radar_utils.h  vad_processor.cpp  vad_processor.h
src/processing/include/: AudioProcessingService.h  DenoiseProcessor.h  FeatureExtractor.h  PipelineManager.h  ProcessorFactory.h  VADProcessor.h  radar_processor_base.h
src/processing/src/: AudioProcessingService.cpp  DenoiseProcessor.cpp  FeatureExtractor.cpp  PipelineManager.cpp  ProcessorFactory.cpp  VADProcessor.cpp  main.cpp  test_impulse.cpp
src/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  index.html  package-lock.json  package.json
src/ui/css/: style.css
src/ui/js/: api.js  main.js
src/ui/src/: App.vue  main.ts
src/ui/src/router/: index.ts
src/ui/src/views/: HomeView.vue  LoginView.vue
tests/: CMakeLists.txt  test_audio.cpp  test_network.cpp
